# gitbumr

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  appveyor.yml  bindings.json  build_fns.sh  gitbumr.pro  gitbumr.sublime-project  linuxdeployqt.desktop  qt-installer.qs  readme.md  repo-creator.py  repo-script.json  test-script.json  unicode.txt
app/: Bindings.cpp  Bindings.h  app.pro  app.qrc  main.cpp  main.qml  qml.qrc  qml_qmlcache.qrc
app/components/: RepoView.qml
app/qml/: main.qml
app/qml/base/: HunkLineModelCache.qml  JsonListModel.qml  LayoutHelper.qml  LibHelper.qml  TextElement.qml  TextItem.qml  TypedArrayListModel.qml  qmldir
app/res/: gitbumr.exe.manifest  gitbumr.rc
lib/: Bindings.cpp  Bindings.h  Cargo.toml  bindings.json  gitbumrcomponents_plugin.cpp  gitbumrcomponents_plugin.h  lib.pro  qml.qrc  qmldir  rustcode_global.h  rustcode_plugin.cpp  rustcode_plugin.h
lib/qml/: About.qml
lib/qml/components/gitapp/: GitApp.qml
lib/qml/components/scrollbar/: ScrollBar2.qml
lib/src/: git.rs  implementation.rs  interface.rs  lib.rs  utils.rs
lib/src/implementation/: app.rs  branches.rs  commit.rs  commitmodel.rs  diffs.rs  git.rs  history.rs  hunks.rs  log.rs  mod.rs  repositories.rs  treemodel.rs
src/: main.rs
src/app/: branch.rs  branches.rs  color.rs  console.rs  db.rs  draw.rs  editor.rs  event.rs  git.rs  layout.rs  linebuffer.rs  logger.rs  mod.rs  repo.rs  settings.rs  state.rs
test/: qml.qrc  test.pro  tst_GitTests.qml  tst_TestSetup.cpp  tst_example.qml  tst_example.qmlc  tst_stuff.cpp
test/tests/: tst_ScrollTests.qml
(+35 files in other folders)
