[package]
name = "lib"
version = "0.1.0"
authors = ["Svend Tofte <stofte@gmail.com>"]

[dependencies]
libc = "0.2.44"
git2 = "0.7.5"
url = "1.7.2"
chrono = "0.4.6"
chrono-humanize = "0.0.11"
crossbeam = "0.5"

[dependencies.rusqlite]
version = "0.15.0"
features = ["bundled"]

[lib]
name = "rust"
crate-type = ["staticlib"]
